--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width">
 
-  <title>368 Website Starter</title>
+  <title>EWU website</title>
  
   <link rel="stylesheet" href="http://necolas.github.io/normalize.css/3.0.2/normalize.css">  
   <link rel="stylesheet" href="css/styles.css">	
@@ -12,7 +12,9 @@
 </head>
 <body>
 	
-	<h1>368 Website Starter</h1>
+	<h1>EWU Website</h1>
+	<img src="img/logo.png" alt="EWU LOGO" height="420" width="420">
+
   
 </body>
 </html>
