--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 </head>
 <body>
 	
-	<h1>EWU Website</h1>
-	<img src="img/logo.png" alt="EWU LOGO" height="420" width="420">
+	<h1>EWU	</h1><h3>University</h3>
+
+	<p>In Cheney, WA.... 
+		<a href="http://ewu.edu">EWU</a>
+		<a href="http://google.com">GOOGLE</a>
+	</p>
+	<p>In Cheney, WA....</p>
+
+	<img src="img/logo.png" alt="EWU LOGO">
+	<img src="img/logo.png" alt="EWU LOGO">
+
+
 
   
 </body>
